# mental-health-ai

./: .env.example  Dockerfile  LICENSE  app.py  create_sample_data.py  environment.yml  pyproject.toml  requirements.txt  run_tests.py  setup.py
.github/workflows/: ci.yml  deploy.yml  tests.yml
api/: app.py
api/middleware/: auth.py  privacy_filter.py  rate_limiter.py
api/routes/: admin.py  analysis.py  batch_processing.py
api/schemas/: analysis.py
config/: default.yaml  development.yaml  production.yaml
data/: sample_data.csv
docker/: Dockerfile.api  Dockerfile.training  docker-compose.yml
docs/: api.md  clinical_validation.md  deployment.md  ethical_guidelines.md
frontend/: package.json
models/inference/: __init__.py  predictor.py  preprocessor.py
models/training/: train.py
notebooks/: clinical_evaluation.ipynb  exploratory_analysis.ipynb  model_experiments.ipynb
scripts/: deploy_huggingface.py  monitoring_setup.py  setup_environment.sh
src/: __init__.py
src/api/: app.py  schemas.py
src/data/: __init__.py  dataset.py  preprocessing.py
src/data_processing/: audio_processor.py  data_loader.py  text_processor.py
src/evaluation/: bias_detector.py  clinical_validator.py  metrics.py
src/model/: architecture.py  loss_functions.py  multimodal_fusion.py
src/models/: __init__.py  model.py
src/training/: evaluation.py  train.py
src/utils/: __init__.py  audio_utils.py  config.py  logger.py  security.py
tests/: tests_basic.py
